[gd_scene load_steps=12 format=3 uid="uid://bsdm1pa4xnuso"]

[ext_resource type="Theme" uid="uid://cbdqhutecvme1" path="res://popup_theme.tres" id="1_jsqkv"]
[ext_resource type="PackedScene" uid="uid://c6p08s4x6uwo4" path="res://scenes/common/game_button.tscn" id="2_0enva"]
[ext_resource type="Script" path="res://scenes/menus/panels/skills/skill_listings.gd" id="2_fhott"]
[ext_resource type="Script" path="res://scenes/menus/panels/skills/learn_button.gd" id="4_fwhne"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f3ug6"]
bg_color = Color(0.937255, 0.945098, 0.92549, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.658824, 0.835294, 0.886275, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m4v2h"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_45d55"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0
bg_color = Color(0.225, 0.225, 0.225, 0.6)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w468s"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0
bg_color = Color(0, 0, 0, 0.6)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4j04m"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0
bg_color = Color(0.1, 0.1, 0.1, 0.3)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_swkbg"]
bg_color = Color(0.219608, 0.615686, 0.827451, 1)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
anti_aliasing_size = 0.01

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lo5so"]
bg_color = Color(0.74902, 0.74902, 0.74902, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[node name="SkillListings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_jsqkv")
script = ExtResource("2_fhott")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="PanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 109.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_f3ug6")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="SkillDetail" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SkillName" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/SkillDetail"]
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"HeaderMedium"
text = "Skill Name"

[node name="LearnButton" parent="PanelContainer/MarginContainer/VBoxContainer/SkillDetail" instance=ExtResource("2_0enva")]
layout_mode = 2
size_flags_horizontal = 10
theme_override_styles/normal = SubResource("StyleBoxFlat_m4v2h")
theme_override_styles/hover = SubResource("StyleBoxFlat_45d55")
theme_override_styles/pressed = SubResource("StyleBoxFlat_w468s")
theme_override_styles/disabled = SubResource("StyleBoxFlat_4j04m")
text = "Learn"
script = ExtResource("4_fwhne")
skill_key = ""
_size = "lg"
_text = "Learn"

[node name="SkillLevel" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(2.08165e-12, 30)
layout_mode = 2
theme_override_constants/separation = 5

[node name="SkillLearned" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_swkbg")

[node name="SkillNotLearned" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lo5so")

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/SkillDetail/LearnButton" to="PanelContainer/MarginContainer/VBoxContainer/SkillDetail/LearnButton" method="_on_pressed"]
